--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Social</title>
+    <title>Tumblr</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -16,6 +16,22 @@
 
   <body>
     <div class="container">
+      <% if notice %>
+        <div class="alert alert-success"><%= notice %></div>
+      <% end %>
+      <% if alert %>
+        <div class="alert alert-danger"><%= alert %></div>
+      <% end %>
+
+      <div class="pull-right">
+        <% if current_user %>
+          <%= link_to 'Log Out', logout_path %>
+        <% else %>
+          <%= link_to 'Log In', login_path %>
+          <%= link_to 'Sign Up', signup_path %>
+        <% end %>
+      </div>
+
       <%= yield %>
     </div>    
   </body>
