--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,9 +1,11 @@
 <%# partial for @post.comments in post/show %>
 
-<p><em><%= comment.user.name %> said:</em></p>
-<p><%= comment.body %></p>
-<% if @can_moderate %>
-  <p>
-    <%= link_to 'Destroy', comment_path(comment), method: :delete, class: "btn btn-default" %>
-  </p>
+<% cache [comment, @can_moderate] do %>
+  <p><em><%= comment.user.name %> said:</em></p>
+  <p><%= comment.body %></p>
+  <% if @can_moderate %>
+    <p>
+      <%= link_to 'Destroy', comment_path(comment), method: :delete, class: "btn btn-default" %>
+    </p>
+  <% end %>
 <% end %>
