--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,8 +5,9 @@
 <%= render @post %>
 
 <h3>Comments</h3>
+<% cache [@post, @can_moderate] do %>
   <%= render @post.comments %>
-
+<% end %>
   <h4>New Comment</h4>
   <%= form_for @post.comments.build do |f| %>
     <div class="form-group">
