--- a/app/views/text_posts/_text_post.html.erb
+++ b/app/views/text_posts/_text_post.html.erb
@@ -14,6 +14,8 @@
       <%= sanitize text_post.body %>
 
       <p><%= pluralize text_post.cached_comment_count, "Comment" %></p>
+
+      <%= debug text_post %>
     </div>
   </div>
 <% end %>
