--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,10 @@
 
 <p class="lead"><%= @user.name %></p>
 
+<% if @user == current_user %>
+  <p class="lead">API Token: <%= @user.api_token %></p>
+<% end %>
+
 <% if current_user %>
   <% if current_user != @user && !current_user.following?(@user) %>
     <%= link_to "Follow", follow_user_path(@user), method: :post, class: "btn btn-default" %>
